test/Harper/Tests/Good/issue002_fac.har
fac :: Integer -> Integer;
fac n = {
  if n <= 0 {
    return 1;
  }
  else {
    return fac (n - 1) * n;
  }
};

main :: Integer;
main = fac 42;