test/Harper/Tests/Bad/NonBoolPredicate_If.har
f :: Integer -> Integer;
f n = {
  if 1 {
    return n;
  }
  return 0;
};

main :: Integer;
main = f 42;